force-app/main/default/objects/Suivi_Demandes_Fidelite__c/Suivi_Demandes_Fidelite__c.object-meta.xml
<CustomObject>
    <description>Cet Objet trace toutes les demandes de fidélité renvoyé à Bilendi ou en erreur</description>
    <label>Suivi Demandes Fidelite</label>
    <nameField>
        <label>Suivi Demandes Fidelite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suivi Demandes Fidelite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>