force-app/main/default/objects/Suivi_Demandes_Fidelite__c/fields/Carte_Number__c.field-meta.xml
<CustomField>
    <fullName>Carte_Number__c</fullName>
    <label>Carte Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>