force-app/main/default/objects/Suivi_Demandes_Fidelite__c/fields/Message_Erreur__c.field-meta.xml
<CustomField>
    <fullName>Message_Erreur__c</fullName>
    <label>Message Erreur</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>