force-app/main/default/objects/Suivi_Demandes_Fidelite__c/fields/Question_Concerne__c.field-meta.xml
<CustomField>
    <fullName>Question_Concerne__c</fullName>
    <label>Question Concerne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>