force-app/main/default/objects/Suivi_Demandes_Fidelite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Email__c</columns>
    <columns>Carte_Number__c</columns>
    <columns>Message_Erreur__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>